@@ -207,6 +207,7 @@ function Return_csCZ()
     --linkifier
     ["lfer_Spawn"] = "Spawn",
     ["lfer_List"] = "List",
+	["lfer_Reload"] = "Reload",
     ["lfer_Goto"] = "Goto",
     ["lfer_Move"] = "Move",
     ["lfer_Turn"] = "Turn",
