@@ -1,5 +1,8 @@
 TrinityAdmin Changelog
 
+-=[ Revision 45 - 1/18/2012]=-
+- Added "Reload" Linkifier button to the output of ".npc info" to reload the creature_template
+
 -=[ Revision 44 - 1/15/2011]=-
 - Forgot to update internal revision string, fixed
 
